# portkey

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml  security.yml
examples/: basic_usage.rs  chat_completion.rs  embeddings.rs  responses.rs  structured_outputs.rs
src/: client.rs  config.rs  error.rs  lib.rs  prelude.rs
src/client/: auth.rs  config.rs  mod.rs  portkey.rs
src/model/: assistants.rs  audio.rs  batches.rs  chat.rs  common.rs  completions.rs  embeddings.rs  feedback.rs  files.rs  fine_tuning.rs  images.rs  logs.rs  messages.rs  mod.rs  models.rs  moderations.rs  prompts.rs  responses.rs  runs.rs  threads.rs
src/service/: assistants.rs  audio.rs  batches.rs  chat.rs  completions.rs  embeddings.rs  feedback.rs  files.rs  fine_tuning.rs  images.rs  logs.rs  messages.rs  mod.rs  models.rs  moderations.rs  prompts.rs  responses.rs  runs.rs  threads.rs
