# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "portkey-sdk"
description = "Unofficial Rust SDK for Portkey AI Gateway: route, observe, and optimize LLM requests across 200+ providers"
readme = "./README.md"

version = "0.2.0"
rust-version = "1.91"
edition = "2024"
license = "MIT"
publish = true

authors = ["Oleh Martsokha <o.martsokha@gmail.com>"]
repository = "https://github.com/martsokha/portkey"
homepage = "https://github.com/martsokha/portkey"
documentation = "https://docs.rs/portkey-sdk"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
## Default features enabled by default
default = ["rustls-tls", "strum"]

## Enable rustls-tls for HTTPS requests (default)
rustls-tls = ["reqwest/rustls-tls"]
## Enable native-tls for HTTPS requests
native-tls = ["reqwest/native-tls"]

## Enable tracing support for HTTP requests and client operations
tracing = ["dep:tracing"]
## Enable string conversions for enums via strum derive macros
strum = ["dep:strum"]
## Enable JSON Schema support for structured outputs with custom types
schema = ["dep:schemars"]

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart"], default-features = false }
url = { version = "2.5", features = [] }

# (De)serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [] }

# Observability
tracing = { version = "0.1", features = [], optional = true }

# Derive macros & utilities
thiserror = { version = "2.0", features = [] }
strum = { version = "0.27", features = ["derive"], optional = true }
derive_builder = { version = "0.20", features = [] }
schemars = { version = "0.8", features = ["derive"], optional = true }

[dev-dependencies]
tokio = { version = "1.49", features = ["macros", "rt-multi-thread"] }
